@@ -1,5 +1,10 @@
 2010-07-06  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Components/PathBar.cs: Improved resizing
+	  behavior.
+
+2010-07-06  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Components/PathBar.cs: fixed multi monitor
 	  support.
 
